<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/Tv_input"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/lightgrey"
        android:gravity="right|bottom"
        android:padding="10dp"
        android:text=""
        android:textSize="48sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10"
        >


        <Button
            android:id="@+id/btnseven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_7"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btneight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_8"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnnine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_9"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/devide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/devide"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">

        <Button
            android:id="@+id/btnfour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_4"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnfive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_5"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnsix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_6"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/multiply"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">

        <Button
            android:id="@+id/btnone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_1"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btntwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_2"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnthree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_3"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/subtract"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">


        <Button
            android:id="@+id/btndot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="ondecimal"
            android:text="@string/dot"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:id="@+id/btnzero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="Ondigit"
            android:text="@string/_0"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btntclr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:text="@string/clr"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/add"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">

        <Button
            android:id="@+id/btnequal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            android:text="@string/equal"
            tools:ignore="UsingOnClickInXml" />



    </LinearLayout>



</LinearLayout>